--- a/src/style/App.css
+++ b/src/style/App.css
@@ -40,43 +40,26 @@
   height: 100vh;
 } 
 
+@media (min-width:769px) {
+  .bodyApp{
+    display: flex;
+    margin: 0 auto;
+    max-width: 972px;
+  }  
+
+  .columnInputs{
+    max-width: 363px;
+  }
+
+  .columnList{
+    max-width: 560px;
+  }
+}
+
 /*HEADER*/
-.header{
-  width:100%; 
-  height: 88px;
-  display: flex;
-  justify-content: space-between;
-  background: #F8F9FA;
-  box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
-}
-
-.header img{
-  width: 123px;
-  height: 20px;
-  margin-left: 2.5%;
-}
-
-.header button{
-  width: 64px;
-  height: 40px;
-  margin-right: 2.5%;
-  border: 1.4px solid var(--gray2);
-  border-radius: 8px;
-  font:var(--fontButton);
-} 
 
 /*FORM*/
 
 /*TOTAL*/
 
 /*LIST*/
-
-
-
-@media screen and (min-width:700px) {
-  /* .columnInputs{
-  width: 65.6%;
-  margin-right: 17.2%;
-  margin-left: 17.2%;
-} */
-}
