--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,18 +2,27 @@
   width:100%; 
   height: 88px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background: #F8F9FA;
   box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
 }
 
-.header img{
+.header div{
+  width:100%; 
+  max-width: 972px;
+  height: 88px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header div img{
   width: 123px;
   height: 20px;
   margin-left: 2.5%;
 }
 
-.header button{
+.header div button{
   width: 64px;
   height: 40px;
   margin-right: 2.5%;
