--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,49 +1,49 @@
-:root{
-  --colorPrimary:#FD377E;
-  --colorPrimary2:#E34981;
-  --colorSecondary:#09B898;
-  --gray1:#F8F9FA;
-  --gray2:#E9ECEF;
-  --gray3:#868E96;
-  --gray4:#212529;
-  --gray5:#343A40;
-  --whiteColor:#FFFFFF;
+:root {
+  --colorPrimary: #FD377E;
+  --colorPrimary2: #E34981;
+  --colorSecondary: #09B898;
+  --gray1: #F8F9FA;
+  --gray2: #E9ECEF;
+  --gray3: #868E96;
+  --gray4: #212529;
+  --gray5: #343A40;
+  --whiteColor: #FFFFFF;
 
-  --title1:bold 28px 'Nunito',sans-serif;
-  --title2:bold 24px 'Nunito',sans-serif;
-  --title3:bold 20px 'Nunito',sans-serif;
-  --title4:bold 12px 'Nunito',sans-serif;
-  --headline:400 16px 'Nunito',sans-serif;
-  --body:400 12px 'Nunito',sans-serif;
-  --fontButton: 600 14px 'Nunito',sans-serif;
-  --caption:400 12px 'Nunito',sans-serif;
+  --title1: bold 28px 'Nunito', sans-serif;
+  --title2: bold 24px 'Nunito', sans-serif;
+  --title3: bold 20px 'Nunito', sans-serif;
+  --title4: bold 12px 'Nunito', sans-serif;
+  --headline: 400 16px 'Nunito', sans-serif;
+  --body: 400 12px 'Nunito', sans-serif;
+  --fontButton: 600 14px 'Nunito', sans-serif;
+  --caption: 400 12px 'Nunito', sans-serif;
 }
 
-.centerVertHoriz{
+.centerVertHoriz {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.centerVert{
+.centerVert {
   display: flex;
   align-items: center;
 }
 
-.centerHoriz{
+.centerHoriz {
   display: flex;
   justify-content: center;
 }
 
-.App{
+.App {
   width: 100%;
   height: 100vh;
-} 
+}
 
 
 /*Initial Page*/
 
-.AppIndex{
+.AppIndex {
   width: 100vw;
   height: 100vh;
   background-color: var(--gray4);
@@ -52,110 +52,115 @@
   align-items: center;
 }
 
-.divContent{
+.divContent {
   max-width: 988px;
   max-height: 593;
   display: flex;
-  gap:48px;
+  gap: 48px;
 }
 
-.divInfo{
+.divInfo {
   max-width: 347px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  gap:28px;
+  gap: 28px;
   margin-left: 30px;
 }
 
-.divInfo img{
+.divInfo img {
   width: 123px;
   height: 20px;
 }
 
-.divInfo h1{
-  font:var(--title1);
+.divInfo h1 {
+  font: var(--title1);
   font-size: 38px;
-  color:var(--whiteColor);
+  color: var(--whiteColor);
 }
 
-.divInfo span{
+.divInfo span {
   font: var(--headline);
-  color:var(--whiteColor);
+  color: var(--whiteColor);
 }
 
-.divInfo button{
+.divInfo button {
   width: 241px;
   height: 48px;
   background-color: var(--colorPrimary);
-  font:var(--fontButton);
+  font: var(--fontButton);
   border: none;
   border-radius: 8px;
   color: var(--whiteColor);
   cursor: pointer;
 }
 
-.divInfo button:hover{
+.divInfo button:hover {
   background-color: var(--colorPrimary2);
 }
 
-.imgMain{
+.imgMain {
   max-width: 500px;
   margin-right: 30px;
 }
 
-.imgMain img{
+.imgMain img {
   width: 100%;
 }
 
-@media(max-width:768px){
-  .divContent{
-    display: flex;
-    flex-direction: column-reverse;
+@media(max-width:768px) {
+  .AppIndex {
+    height: auto;
   }
 
-  .imgMain{
+  .divContent {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 20px 10px;
+  }
+
+  .imgMain {
     max-width: 360px;
   }
 
-  .imgMain img{
+  .imgMain img {
     width: 100%;
   }
 
-  .divInfo{
+  .divInfo {
     display: flex;
     align-items: center;
     margin-left: 0;
   }
 
-  .divInfo h1{
+  .divInfo h1 {
     text-align: center;
   }
 }
 
 /*LIST*/
-.divEmptyList{
+.divEmptyList {
   margin-left: 58px;
   margin-top: 34px;
 }
 
-.divEmptyList img{
+.divEmptyList img {
   width: 100%;
 }
 
 @media (min-width:769px) {
-  .bodyApp{
+  .bodyApp {
     display: flex;
     margin: 0 auto;
     max-width: 972px;
-  }  
+  }
 
-  .columnInputs{
+  .columnInputs {
     max-width: 363px;
   }
 
-  .columnList{
+  .columnList {
     max-width: 560px;
   }
 }
@@ -165,5 +170,3 @@
 /*FORM*/
 
 /*TOTAL*/
-
-
