--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -1,10 +1,10 @@
-.columnInputs{
+.columnInputs {
   width: 95%;
   margin-right: 2.5%;
   margin-left: 2.5%;
 }
 
-.formMain{
+.formMain {
   width: 100%;
   height: 351px;
   flex-direction: column;
@@ -13,7 +13,7 @@
   margin-top: 39px;
 }
 
-.formDescription{
+.formDescription {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -23,12 +23,12 @@
   padding-right: 24.5px;
 }
 
-.formDescription label{
-  font:var(--caption);
-  color:var(--gray4);
+.formDescription label {
+  font: var(--caption);
+  color: var(--gray4);
 }
 
-.formDescription input{
+.formDescription input {
   height: 52.8px;
   background-color: var(--gray1);
   border: 1px solid var(--gray1);
@@ -37,36 +37,36 @@
   padding-left: 16px;
 }
 
-.formDescription input::placeholder{
+.formDescription input::placeholder {
   font: var(--headline);
-  color:var(--gray3);
+  color: var(--gray3);
 }
 
-.formDescription span{
-  font:var(--caption);
-  color:var(--gray4);
+.formDescription span {
+  font: var(--caption);
+  color: var(--gray4);
   margin-top: 4.4px;
 }
 
-.formValueAndType{
+.formValueAndType {
   display: flex;
-  padding-left:24.5px;
-  padding-right:24.5px;
+  padding-left: 24.5px;
+  padding-right: 24.5px;
   justify-content: space-between;
 }
 
-.formValueAndType div:first-child{
+.formValueAndType div:first-child {
   display: flex;
   flex-direction: column;
   width: 50%;
 }
 
-.formValueAndType div:first-child label{
-  font:var(--caption);
+.formValueAndType div:first-child label {
+  font: var(--caption);
   color: var(--gray4);
 }
 
-.formValueAndType div:first-child input{
+.formValueAndType div:first-child input {
   width: 80%;
   height: 46px;
   padding-left: 16px;
@@ -76,51 +76,56 @@
 
 }
 
-.formValueAndType div:first-child input::placeholder{
+.formValueAndType div:first-child input::placeholder {
   padding-left: 16px;
-  font:var(--headline);
+  font: var(--headline);
 }
 
-.formValueAndType div:nth-child(2){
+.formValueAndType div:nth-child(2) {
   display: flex;
   flex-direction: column;
   width: 50%;
 }
 
-.formValueAndType div:nth-child(2) label{
-  font:var(--caption);
+.formValueAndType div:nth-child(2) label {
+  font: var(--caption);
   color: var(--gray4);
 }
 
-.formValueAndType div:nth-child(2) select{
+.formValueAndType div:nth-child(2) select {
   height: 48px;
   background-color: var(--gray1);
   border: 1px solid var(--gray1);
   border-radius: 8px;
 }
 
-#select_options option{
+#select_options option {
   margin: 20px;
 }
 
-.formButton{
+.formButton {
   margin-top: 20px;
-  padding-left:24.5px;
-  padding-right:24.5px;
+  padding-left: 24.5px;
+  padding-right: 24.5px;
 }
 
-.formButton button{
+.formButton button {
   height: 48px;
   width: 100%;
   border-radius: 8px;
   border: 2px solid var(--colorPrimary);
-  background-color:var(--colorPrimary);
-  color:var(--whiteColor);
-  font: 500 16px 'Nunito',sans-serif;
+  background-color: var(--colorPrimary);
+  color: var(--whiteColor);
+  font: 500 16px 'Nunito', sans-serif;
   cursor: pointer;
 }
 
-.formButton button:hover{
+.formButton button:hover {
   background: var(--colorPrimary2);
   color: var(--gray1);
+}
+
+.error-message {
+  font: var(--caption);
+  color: var(--danger);
 }
