--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -52,7 +52,8 @@
 
 .liContentListMain div figure {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   width: 22px;
   height: 22px;
   margin-top: 0;
@@ -62,7 +63,8 @@
 }
 
 .liContentListMain div figure:hover {
-  background: var(--gray4);
+  box-shadow: 0px 0px 5px 0.5px;
+  background-color: var(--whiteColor);
 }
 
 .liContentListMain div figure img {
