--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
-.header{
-  width:100%; 
+.header {
+  width: 100%;
   height: 88px;
   display: flex;
   justify-content: center;
@@ -7,32 +7,32 @@
   box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
 }
 
-.header div{
-  width:100%; 
+.header div {
+  width: 100%;
   max-width: 972px;
-  height: 88px;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header div img{
+.header div img {
   width: 123px;
   height: 20px;
   margin-left: 2.5%;
 }
 
-.header div button{
+.header div button {
   width: 64px;
   height: 40px;
   margin-right: 2.5%;
   border: 1.4px solid var(--gray2);
   border-radius: 8px;
-  font:var(--fontButton);
+  font: var(--fontButton);
   cursor: pointer;
-} 
+}
 
-.header div button:hover{
-  background-color:var(--gray5);
-  color:var(--gray1);
+.header div button:hover {
+  background-color: var(--gray5);
+  color: var(--gray1);
 }
