--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -7,10 +7,16 @@
 
 .ulList {
   width: 100%;
+  height: 80%;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
+  overflow-y: scroll;
+}
+
+.ulList::-webkit-scrollbar {
+  width: 5px;
 }
 
 .liContentList:hover {
