--- a/src/style/App.css
+++ b/src/style/App.css
@@ -38,8 +38,8 @@
 }
 
 .App {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 
@@ -161,6 +161,7 @@
     display: flex;
     margin: 0 auto;
     max-width: 972px;
+    height: 80%;
   }
 
   .columnInputs {
@@ -169,6 +170,7 @@
 
   .columnList {
     max-width: 560px;
+    height: 90%;
   }
 }
 
